# moodle_aumentar_tiempo_dedicacion

./: Cargo.toml  README.md
manejador/: analizar_archivo_origen.rs  cliente_http.rs  gestionar_clicks.rs  identificar.rs  mod.rs  obtener_recursos.rs
src/: main.rs
src/argumentos/: mod.rs
utilidades/: mod.rs
